--- a/.github/workflows/melpazoid.yml
+++ b/.github/workflows/melpazoid.yml
@@ -10,21 +10,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v1
-      with: { python-version: 3.9 }
-    - name: Install
-      run: |
-        python -m pip install --upgrade pip
-        sudo apt-get install emacs && emacs --version
-        git clone https://github.com/riscy/melpazoid.git ~/melpazoid
-        pip install ~/melpazoid
-    - name: Run
-      env:
-        LOCAL_REPO: ${{ github.workspace }}
-        # RECIPE is your recipe as written for MELPA:
-        RECIPE: (blamer :repo "artawower/blamer.el" :fetcher github)
-        # set this to false (or remove it) if the package isn't on MELPA:
-        EXIST_OK: true
-      run: echo $GITHUB_REF && make -C ~/melpazoid
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with: { python-version: "3.13" }
+      - name: Install
+        run: |
+          python -m pip install --upgrade pip
+          sudo apt-get install emacs && emacs --version
+          git clone https://github.com/riscy/melpazoid.git ~/melpazoid
+          pip install ~/melpazoid
+      - name: Run
+        env:
+          LOCAL_REPO: ${{ github.workspace }}
+          # RECIPE is your recipe as written for MELPA:
+          RECIPE: (blamer :repo "artawower/blamer.el" :fetcher github)
+          # set this to false (or remove it) if the package isn't on MELPA:
+          EXIST_OK: true
+        run: echo $GITHUB_REF && make -C ~/melpazoid
